--- a/main.ipynb
+++ b/main.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
    "source": [
     "colunas_test = ['HistoricoCredito', 'Emprego', 'Habitacao', 'Profissao', 'EmprestimoExistente', 'SocioEmpresa']\n",
     "\n",
-    "teste = test[colunas_test]\n",
+    "test = test[colunas_test]\n",
     "previsoes = RandomForest.predict(test)\n",
     "print(previsoes)"
    ]
